contrast issues

--- a/lesson2/styles/l2-small.css
+++ b/lesson2/styles/l2-small.css
@@ -23,7 +23,7 @@ header {
 header,
 footer {
     background-color: #007000;
-    color: #e8eaed;
+    color: #FFFFFF;
     text-align: center;
 }
 
